# unity-scopes-shell

./: CMakeLists.txt
data/: CMakeLists.txt  libscope-harness.map  libscope-harness.pc.in  unity-plugin-scopes.pc.in  unity-scopes-qml.pc.in
docs/: CMakeLists.txt  conf.py  index.rst
docs/api/: api.rst
docs/tutorial/: tutorial.rst
src/: CMakeLists.txt
src/Unity/: CMakeLists.txt  FilterBaseInterface.h  FiltersInterface.h  OptionSelectorFilterInterface.h  OptionSelectorOptionsInterface.h  categories.cpp  categories.h  collectors.cpp  collectors.h  department.cpp  department.h  departmentnode.cpp  departmentnode.h  favorites.cpp  favorites.h  filtergroupwidget.cpp  filtergroupwidget.h  filters.cpp  filters.h  geoip.cpp  geoip.h  iconutils.cpp  iconutils.h  localization.h  locationaccesshelper.cpp  locationaccesshelper.h  locationservice.cpp  locationservice.h  logintoaccount.cpp  logintoaccount.h  modelupdate.h  musicpreviewtrackmodel.cpp  musicpreviewtrackmodel.h  optionselectorfilter.cpp  optionselectorfilter.h  optionselectoroptions.cpp  optionselectoroptions.h  overviewcategories.cpp  overviewcategories.h  overviewresults.cpp  (+31 more)
src/Unity/scopes-ng/: CMakeLists.txt  categories.cpp  categories.h  collectors.cpp  collectors.h  preview.cpp  preview.h  previewmodel.cpp  previewmodel.h  previewstack.cpp  previewstack.h  previewwidgetmodel.cpp  previewwidgetmodel.h  resultsmodel.cpp  resultsmodel.h  scope.cpp  scope.h  scopes.cpp  scopes.h  utils.cpp  utils.h
src/python/: CMakeLists.txt  category-py.cpp  main.cpp  matchers-py.cpp  python-test.py  registry-py.cpp  result-py.cpp  results-view-py.cpp  scope-harness-py.cpp  variant-py.cpp
src/python/pyscope_harness/: CMakeLists.txt  __init__.py  abstract-view-py.cpp  category-py.cpp  department-py.cpp  exceptions-py.cpp  main.cpp  matchers-py.cpp  preview-matchers-py.cpp  preview-view-py.cpp  preview-widget-list-py.cpp  preview-widget-py.cpp  registry-py.cpp  result-py.cpp  results-view-py.cpp  scope-harness-py.cpp  testing.py  variant-py.cpp
src/python/scope_harness/: CMakeLists.txt  __init__.py  abstract-view-py.cpp  category-py.cpp  department-py.cpp  exceptions-py.cpp  main.cpp  matchers-py.cpp  preview-view-py.cpp  preview-widget-list-py.cpp  preview-widget-py.cpp  registry-py.cpp  result-py.cpp  results-view-py.cpp  scope-harness-py.cpp  scope-uri-py.cpp  settings-matchers-py.cpp  settings-view-py.cpp  testing.py  variant-py.cpp
src/scope-harness/: CMakeLists.txt  abstract-view.h  category-list-matcher.cpp  category-list-matcher.h  category-matcher.cpp  category-matcher.h  category.cpp  category.h  match-result.cpp  match-result.h  pre-existing-registry.cpp  pre-existing-registry.h  preview-view.cpp  preview-view.h  registry-spawner.cpp  registry-spawner.h  registry.h  result-matcher.cpp  result-matcher.h  result.cpp  result.h  results-view.cpp  results-view.h  scope-harness.cpp  scope-harness.h  test-utils.cpp  test-utils.h  types.h
src/scope-harness/internal/: category-arguments.h  child-department-arguments.h  department-arguments.h  filter-arguments.h  filters-view-arguments.h  preview-widget-arguments.h  preview-widget-list-arguments.h  result-arguments.h  results-view-arguments.h  settings-view-arguments.h  signal-handler.cpp  signal-handler.h  test-utils.cpp  test-utils.h
src/scope-harness/matcher/: category-list-matcher.cpp  category-list-matcher.h  category-matcher.cpp  category-matcher.h  child-department-matcher.cpp  child-department-matcher.h  department-matcher.cpp  department-matcher.h  filter-list-matcher.cpp  filter-list-matcher.h  filter-matcher.cpp  filter-matcher.h  match-result.cpp  match-result.h  option-selector-filter-matcher.cpp  option-selector-filter-matcher.h  preview-column-matcher.cpp  preview-column-matcher.h  preview-matcher.cpp  preview-matcher.h  preview-widget-matcher.cpp  preview-widget-matcher.h  result-matcher.cpp  result-matcher.h  scope-uri.cpp  scope-uri.h  settings-matcher.cpp  settings-matcher.h  settings-option-matcher.cpp  settings-option-matcher.h
src/scope-harness/preview/: preview-widget-list.cpp  preview-widget-list.h  preview-widget.cpp  preview-widget.h
src/scope-harness/registry/: custom-registry-main.cpp  custom-registry.cpp  custom-registry.h  pre-existing-registry.cpp  pre-existing-registry.h  registry.h  system-registry.cpp  system-registry.h
src/scope-harness/results/: category.cpp  category.h  child-department.cpp  child-department.h  department.cpp  department.h  filter.cpp  filter.h  result.cpp  result.h
src/scope-harness/view/: abstract-view.h  filters-view.cpp  filters-view.h  preview-view.cpp  preview-view.h  results-view.cpp  results-view.h  settings-view.cpp  settings-view.h
tests/: CMakeLists.txt  departmentstest.cpp  favoritestest.cpp  favouritestest.cpp  filtersendtoendtest.cpp  filtersharnesstest.cpp  filterstest.cpp  geoip.ubuntu.com.py  locationtest.cpp  optionselectorfiltertest.cpp  overviewtest.cpp  previewtest.cpp  registry-spawner.cpp  registry-spawner.h  resultstest-ng.cpp  resultstest.cpp  scope-test-interface.cpp  scope-test-interface.h  scopesinittest.cpp  settingsendtoendtest.cpp  settingstest.cpp  test-utils.cpp  test-utils.h  utilstest-ng.cpp  utilstest.cpp
tests/config/: Registry.ini.in  Zmq.ini.in
tests/config/scope-A/: scope-A.cpp
tests/data/: CMakeLists.txt  Registry.ini.in  Runtime.ini.in  Zmq.ini.in  com.canonical.scopes.test.xml  settings-unicode.ini
tests/data/mock-scope-departments/: CMakeLists.txt  mock-scope-departments-settings.ini  mock-scope-departments.cpp  mock-scope-departments.ini.in
tests/data/mock-scope-departments-flipflop/: CMakeLists.txt  mock-scope-departments-flipflop.cpp  mock-scope-departments-flipflop.ini.in
tests/data/mock-scope-double-nav/: CMakeLists.txt  mock-scope-double-nav.cpp  mock-scope-double-nav.ini.in
tests/data/mock-scope-filters/: CMakeLists.txt  mock-scope-filters.cpp  mock-scope-filters.ini.in
tests/data/mock-scope-info/: CMakeLists.txt  mock-scope-info.cpp  mock-scope-info.ini.in
tests/data/mock-scope-ttl/: CMakeLists.txt  (+2 more)
tools/location/: CMakeLists.txt  main.cpp
(+91 files in other folders)
